# NN_FPGA

./: Cargo.toml  build.rs  cargo.tomi  interface.rs  matrix.v  readme.md  sample.py
benches/: performance.rs
examples/: advanced.rs  basic_example.py  basic_operations.py  benchmark.py  large_matrix_example.py  matrix-vector-demo.py  vector-demo.py
fpga/: control.sv  decoder.sv  makefile  memory_controller.sv  mtx_types_pkg.sv  mtx_unit.sv  mtx_unit_testbench.sv  multi_unit_processor.sv  pkg.sv  shared.sv  shared_memory.sv  unit.sv
python/: advanced_demo.py  basic_demo.py
rust/: block.rs  cargo.tomi  cargo.txt  error.rs  lib.rs  matrix.rs  python.rs  sample.py  store.rs  types.rs  vector.rs
rust/api/: async.rs  python.rs
rust/app/: executor.rs  monitor.rs  scheduler.rs
rust/core/: compute.rs  error.rs  types.rs
rust/hw/: fpga.rs  memory.rs  protocol.rs  unit.rs
rust/interface/: rest.rs
src/: compute.rs  device.rs  error.rs  executor.rs  fpga.rs  instructions.rs  lib.rs  math.rs  memory.rs  monitor.rs  scheduler.rs  types.rs
src/core/: data_types.rs  device.rs  error.rs  mod.rs
src/device/: instruction.rs  memory.rs  mod.rs  unit.rs
src/python/: mod.rs
tests/: integration_tests.rs  performance_tests.rs
verilog/: common.sv  control.sv  decoder.sv  memory.sv  memory_controller.sv  pkg.sv  shared.sv  top.sv  unit.sv
